feature#35: footer V1 with contact and links

--- a/angular-front/src/app/home/components/countdown-custom/countdown-custom.component.scss
+++ b/angular-front/src/app/home/components/countdown-custom/countdown-custom.component.scss
@@ -33,7 +33,7 @@
   display: block;
   height: $halfPaletteHeight;
   color: $secondary-gold-color;
-  font-family: 'fenomen';
+  font-family: $time-font;
   padding: 0.25em 0.25em;
   border-radius: $borderRadius $borderRadius 0 0;
   // FIXME
