--- a/angular-front/src/app/home/components/countdown-group/countdown-group.component.html
+++ b/angular-front/src/app/home/components/countdown-group/countdown-group.component.html
@@ -1,5 +1,5 @@
-<div class="countdown turquoise-radiant-reverse d-flex flex-column align-items-center">
-  <h1 class="heading-line" i18n>TEMPS RESTANT</h1>
+<div class="countdown d-flex flex-column align-items-center">
+  <h1 class="heading-line" i18n>Temps Restant</h1>
   <div class="unselectable-content d-flex justify-content-center align-items-center">
     <div class="d-flex flex-column align-items-center">
       <app-countdown-custom [unit]="monthToDday"></app-countdown-custom>
