--- a/angular-front/src/styles/variables.scss
+++ b/angular-front/src/styles/variables.scss
@@ -15,16 +15,53 @@ $secondary-gold-color:#E59933;
 $primary-negative-color:#D98F9A;
 $prmary-positive-color:#8FD9A9;
 $dark-color: #231D21;
-$grey-color: #a3abbd;
+$grey-color: #f4f4f4;
 $white-color: #fbf9f7;
 $blue-color: #122274;
 $red-color: #CF081F;
 
-
 /* COUNTDOWN */
 $halfPaletteHeight: 4vw;
 $paletteWidth: 10vw;
+
 // SIZES
 $footer-link-text-size: 2rem;
 $footer-text-size: 1.2rem;
 $borderRadius: 2.5vw;
+
+/* FONTS */
+@font-face {
+  font-family: "josefin-light-italic";
+  src: local("josefin-light-italic-font"), url(/assets/fonts/josefin/JosefinSans-LightItalic.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "josefin-light";
+  src: local("josefin-light-font"), url(/assets/fonts/josefin/JosefinSans-Light.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "cherolina";
+  src: local("cherolina-font"), url(/assets/fonts/Cherolina.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "fenomen";
+  src: local("fenomen-font"), url(/assets/fonts/Fenomen.otf) format("opentype");
+}
+
+@font-face {
+  font-family: "saudagar";
+  src: local("saudagar-font"), url(/assets/fonts/Saudagar.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "utopia";
+  src: local("utopia-font"), url(/assets/fonts/Utopia.otf) format("opentype");
+}
+
+$unveiling-font: 'cherolina';
+$heading-font: 'saudagar';
+$text-font: 'josefin-light';
+$text-italic-font: 'cabin-italic';
+$time-font: 'fenomen';
