PR return: clean and remove useless files

--- a/angular-front/src/app/shared/footer/footer.component.html
+++ b/angular-front/src/app/shared/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="footer-container">
   <div class="container">
-    <div class="footer-main container-fluid d-flex flex-wrap justify-content-center pt-5">
+    <div class="footer-main d-flex flex-wrap justify-content-center pt-5">
       <div class="col-md-5 col-sm-5 col-12 d-flex justify-content-center align-items-start mb-4">
         <button class="light-button gold" data-style="no-move" routerLink="/register" routerLinkActive="active-link" i18n>
           INSCRIPTION
@@ -13,7 +13,7 @@
             <li>
               <p class="contact-information d-flex align-items-center">
                 <i class="las la-phone"></i>
-                <a class="" href="tel:0648605205">06 48 60 52 05</a>
+                <a class="" href="tel:+33648605205">+33 6 48 60 52 05</a>
               </p>
             </li>
             <li>
@@ -38,18 +38,19 @@
       </div>
     </div>
     <div class="col-12 d-flex flex-wrap justify-content-between mt-2">
-      <div class="footer-sud-menu footer-link col-md-6 col-sm-6 col-12 d-flex justify-content-between align-items-start">
+      <div
+        class="footer-sud-menu footer-link col-md-6 col-sm-6 col-12 d-flex justify-content-between align-items-start">
         <ul>
           <li>
             <a class="blue-link text-link unselectable-content" routerLink="/home" routerLinkActive="active-link">
               <span i18n>Home</span>
             </a>
           </li>
-          <li> <a class="blue-link text-link  unselectable-content" routerLink="/information"
+          <li> <a class="blue-link text-link unselectable-content" routerLink="/information"
               routerLinkActive="active-link">
               <span i18n>Information</span>
             </a></li>
-          <li> <a class="blue-link text-link  unselectable-content" routerLink="/register"
+          <li> <a class="blue-link text-link unselectable-content" routerLink="/register"
               routerLinkActive="active-link">
               <span i18n>Register</span>
             </a></li>
@@ -59,13 +60,12 @@
         </ul>
       </div>
       <div class="social col-md-6 col-sm-6 col-12 d-flex align-items-start justify-content-end">
-          <a class="blue-link" href="https://www.instagram.com/huyenkaletty/">
-            <i class="lab la-instagram"></i>
-          </a>
-          <a class="blue-link"
-            href="https://www.linkedin.com/in/cl%C3%A9ment-gibert-7012/">
-            <i class="lab la-linkedin"></i>
-          </a>
+        <a class="blue-link" href="https://www.instagram.com/huyenkaletty/">
+          <i class="lab la-instagram"></i>
+        </a>
+        <a class="blue-link" href="https://www.linkedin.com/in/cl%C3%A9ment-gibert-7012/">
+          <i class="lab la-linkedin"></i>
+        </a>
       </div>
     </div>
   </div>
