--- a/angular-front/src/app/home/components/countdown-group/countdown-group.component.scss
+++ b/angular-front/src/app/home/components/countdown-group/countdown-group.component.scss
@@ -2,6 +2,7 @@
 @import "../../../node_modules/rfs/scss";
 
 .countdown{
+  // TODO
   // background: rgb(67,206,162);
   // background: linear-gradient(0deg, rgba(67,206,162,1) 0%, rgba(87,215,180,1) 8%, rgba(100,221,192,1) 18%, rgba(141,240,229,1) 50%, rgba(143,217,206,1) 75%, rgba(125,192,182,1) 100%);
   // background:linear-gradient(-15deg,#00ff94 10%,#00e5c4 60%,#00beff);
@@ -10,7 +11,6 @@
 }
 
 .clock-unit {
-  // font-family: $heading-font;
   color:$dark-color;
 }
 
@@ -21,13 +21,11 @@
             inset -20px -20px 60px $third-secondary-blue-shadow-dark-2;
 }
 
-
 @media only screen and (min-width: 2560px) {
   .clock-unit {
     @include font-size(3rem);
   }
 }
-
 
 @media only screen and (min-width: 1440px) {
   .clock-unit {
@@ -47,7 +45,6 @@
       @include font-size(3vw);
     }
   }
-
 
   @media only screen and (max-width: 768px) {
     .clock-unit {
