feature#33: Adding tab logo

--- a/angular-front/src/app/shared/header/header.component.html
+++ b/angular-front/src/app/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="container-fluid mb-3">
   <div class="unselectable-content row justify-content-center">
-    <img alt="image du logo" i18n-alt class="col-11 col-sm-10 col-md-8 mt-2 mt-md-4" src="/assets/images/logo.png"/>
+    <img alt="image du logo" i18n-alt class="col-11 col-sm-10 col-md-8 mt-2 mt-md-4" src="/assets/images/logo-full.png"/>
   </div>
   <div class="unselectable-content row">
     <div class="text-center col-12 mt-4 mt-sm-4 mt-md-5">
