First setup couple presentation

--- a/angular-front/src/app/home/components/hero/hero.component.html
+++ b/angular-front/src/app/home/components/hero/hero.component.html
@@ -1,3 +1,24 @@
-<section class="hero-section">
-
+<section class="couple-section">
+  <div class="container">
+    <div class="row">
+      <div class="couple-title text-center">
+        <h2>Happy Couple</h2>
+      </div>
+      <div class="row d-flex align-items-center justify-content-center">
+        <div class="couple text-center">
+          <img src="/assets/images/clement_profil.jpg" alt="Clement">
+          <h3 class="couple-title mt-2">Clément</h3>
+          <p class="">"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</p>
+        </div>
+        <img class="heart beat" src="/assets/images/heart.png" alt="heart">
+        <div class="couple text-center">
+          <img src="/assets/images/huyen_profil.jpg" alt="Huyen">
+          <h3 class="couple-title mt-2">Huyen</h3>
+          <p class="">"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
