--- a/angular-front/src/app/shared/footer/footer.component.scss
+++ b/angular-front/src/app/shared/footer/footer.component.scss
@@ -2,7 +2,7 @@
 @import "variables.scss";
 
 .footer-container {
-  background-color: $grey-color;
+  background-color: $white-color;
   overflow-y: none;
   padding-left: 0;
   padding-right: 0;
