--- a/angular-front/src/styles/variables.scss
+++ b/angular-front/src/styles/variables.scss
@@ -16,7 +16,7 @@ $primary-negative-color:#D98F9A;
 $prmary-positive-color:#8FD9A9;
 $dark-color: #231D21;
 $grey-color: #f4f4f4;
-$white-color: #fbf9f7;
+$white-color: #ffffff;
 $blue-color: #122274;
 $red-color: #CF081F;
 
@@ -60,7 +60,7 @@ $borderRadius: 2.5vw;
   src: local("utopia-font"), url(/assets/fonts/Utopia.otf) format("opentype");
 }
 
-$unveiling-font: 'cherolina';
+$stylish-font: 'cherolina';
 $heading-font: 'saudagar';
 $text-font: 'josefin-light';
 $text-italic-font: 'cabin-italic';
