feature#34: clean heart

--- a/angular-front/src/app/home/components/hero/hero.component.html
+++ b/angular-front/src/app/home/components/hero/hero.component.html
@@ -1,8 +1,8 @@
 <section class="couple-section">
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
-      <div class="couple-title text-center">
-        <h2>Happy Couple</h2>
+      <div class="text-center">
+        <h1 class="heading-line gold" i18n>Happy couple</h1>
       </div>
       <div class="row d-flex align-items-center justify-content-center">
         <div class="couple text-center">
@@ -11,7 +11,7 @@
           <p class="">"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</p>
         </div>
-        <img class="heart beat" src="/assets/images/heart.png" alt="heart">
+          <img class="heart beat" src="/assets/images/heart.png">
         <div class="couple text-center">
           <img src="/assets/images/huyen_profil.jpg" alt="Huyen">
           <h3 class="couple-title mt-2">Huyen</h3>
