--- a/angular-front/src/app/home/components/hero/hero.component.scss
+++ b/angular-front/src/app/home/components/hero/hero.component.scss
@@ -3,16 +3,11 @@
 .couple-section {
   min-height: 22rem;
   background-color: $white-color;
-  padding: 80px 0 80px;
-
-  .couple-title {
-    // max-width: 15px;
-    padding: 0 15px;
-  }
+  padding: 40px 0 80px;
 
   .heart {
-    width: 180px;
-    height: 80px;
+    width: 80px;
+    height: 50px;
     margin-bottom: 120px;
     animation: 1.5s ease 0s infinite beat;
   }
@@ -24,11 +19,11 @@
       width: 280px;
       height: 320px;
       border-radius: 50%;
-      border: 6px solid $primary-gold-color;
+      border: 6px solid $secondary-gold-color;
     }
     .couple-title {
       font-size: 68px;
-      color: $primary-gold-color;
+      color: $secondary-gold-color;
       font-family: $stylish-font;
       letter-spacing: 1px;
     }
@@ -36,8 +31,6 @@
 }
 
 @keyframes beat {
-  0%, 50%, 100% { transform: scale(1, 1); }
+  0%, 50%, 100% { transform: scale(1.1, 1.1); }
   30%, 80% { transform: scale(0.92, 0.95); }
 }
-
-
