--- a/angular-front/src/styles/variables.scss
+++ b/angular-front/src/styles/variables.scss
@@ -10,8 +10,10 @@ $third-secondary-blue-shadow-dark-1: #6aa39b;
 $third-secondary-blue-shadow-dark-2: #90ddd1;
 $green-blue-color: #43cea2;
 $light-blue-color: #E3FFFC;
+//FIXME change gold color
 $primary-gold-color: #EDB24C;
 $secondary-gold-color:#E59933;
+//gold e2c080
 $primary-negative-color:#D98F9A;
 $prmary-positive-color:#8FD9A9;
 $dark-color: #231D21;
@@ -19,6 +21,9 @@ $grey-color: #f4f4f4;
 $white-color: #ffffff;
 $blue-color: #122274;
 $red-color: #CF081F;
+
+/* HEADING LINE */
+$sizeBorder: 2px;
 
 /* COUNTDOWN */
 $halfPaletteHeight: 4vw;
