--- a/angular-front/src/app/shared/header/header.component.scss
+++ b/angular-front/src/app/shared/header/header.component.scss
@@ -32,7 +32,7 @@
 }
 
 .navbar-line {
-  height: 0.10rem;
+  height: $sizeBorder;
   border:none;
   background-color: $primary-gold-color;
   opacity: 100;
