--- a/angular-front/src/app/home/components/countdown-group/countdown-group.component.scss
+++ b/angular-front/src/app/home/components/countdown-group/countdown-group.component.scss
@@ -8,6 +8,7 @@
   // background:linear-gradient(-15deg,#00ff94 10%,#00e5c4 60%,#00beff);
   // background-image: linear-gradient(-15deg, rgb(0, 255, 148) 10%, rgb(0, 229, 196) 50%, rgb(0, 190, 255));
   background-color: #60C4BF;
+  padding: 40px 0 40px;
 }
 
 .clock-unit {
