--- a/angular-front/src/app/home/components/hero/hero.component.html
+++ b/angular-front/src/app/home/components/hero/hero.component.html
@@ -8,16 +8,21 @@
         <div class="couple text-center">
           <img src="/assets/images/clement_profil.jpg" alt="Clement">
           <h3 class="couple-title mt-2">Clément</h3>
-          <p class="">"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</p>
         </div>
+        <div class="info-center d-flex flex-column align-items-center justify-content-center">
+          <h3 class="couple-title">Save the date</h3>
+          <h3 class="couple-title">Samedi 17 juin 2023</h3>
           <img class="heart beat" src="/assets/images/heart.png">
+        </div>
         <div class="couple text-center">
           <img src="/assets/images/huyen_profil.jpg" alt="Huyen">
           <h3 class="couple-title mt-2">Huyen</h3>
-          <p class="">"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</p>
         </div>
+      </div>
+      <div class="row d-flex justify-content-center text-center mt-2">
+        <p class="">"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</p>
+          <img class="logo-bottom" src="/assets/images/logo-mirror.png">
       </div>
     </div>
   </div>
