feature#34: header improvement and responsivess

--- a/angular-front/src/app/home/components/hero/hero.component.html
+++ b/angular-front/src/app/home/components/hero/hero.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="text-center">
-        <h1 class="heading-line gold" i18n>Happy couple</h1>
+        <h1 class="heading-line gold" i18n>{{dDay | date:'longDate'}}</h1>
       </div>
       <div class="row d-flex align-items-center justify-content-center">
         <div class="couple text-center">
@@ -11,7 +11,7 @@
         </div>
         <div class="info-center d-flex flex-column align-items-center justify-content-center">
           <h3 class="couple-title">Save the date</h3>
-          <h3 class="couple-title">Samedi 17 juin 2023</h3>
+          <h3 class="couple-title">test</h3>
           <img class="heart beat" src="/assets/images/heart.png">
         </div>
         <div class="couple text-center">
