--- a/angular-front/src/app/app.component.html
+++ b/angular-front/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="main-container">
-  <app-header class="header-container"></app-header>
+  <app-header></app-header>
   <router-outlet></router-outlet>
   <app-footer></app-footer>
 </div>
