--- a/angular-front/src/app/home/components/hero/hero.component.scss
+++ b/angular-front/src/app/home/components/hero/hero.component.scss
@@ -1,44 +1,216 @@
 @import "variables.scss";
+@import "../../../node_modules/rfs/scss";
 
 .couple-section {
-  min-height: 22rem;
-  background-color: $grey-color;
-  padding: 40px 0 40px;
+  height: 60rem;
+  background-color: $white-color;
+  padding: 0 0 10px;
+  background-image: url('/assets/images/heart-background.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 55rem 45rem;
 
-
-  .info-center {
-    width: 10%;
-    .heart {
-      width: 35%;
-      height: 50px;
-      animation: 1.5s ease 0s infinite beat;
+  .middle {
+    position: relative;
+    .matcher {
+      position: absolute;
+      top: 77%;
+      z-index: 99;
+      width: 6rem;
+    }
   }
-  }
 
+  .card {
+    border: 0.1px solid $white-color;
+    border-radius: 25px;
+    background: rgb(47, 128, 237);
+    background: linear-gradient(160deg, rgba(47, 128, 237, 1) 5%, rgba(141, 240, 229, 1) 85%);
+    padding: 0 0 10px 0;
 
-  .couple {
-    width: 45%;
-    max-width: 50%;
     img {
-      width: 280px;
+      width: 100%;
+      height: 100%;
       height: 320px;
-      border-radius: 50%;
-      border: 6px solid $secondary-gold-color;
+      border-top-left-radius: 1.4rem;
+      border-top-right-radius: 1.4rem;
     }
-    .couple-title {
-      font-size: 68px;
-      color: $secondary-gold-color;
-      font-family: $stylish-font;
-      letter-spacing: 1px;
+
+    .card-info {
+      width: 80%;
+      color: $dark-color;
+
+      .icon-certified {
+        width: 20px;
+        height: 20px;
+        margin-left: 6px;
+      }
+
+      p {
+        margin-bottom: 0;
+      }
+
+      .couple-title {
+        font-size: 20px;
+        font-family: $text-font;
+        letter-spacing: 1px;
+        font-family: 'josefin-regular';
+      }
+
+      .las {
+        margin-right: 4px;
+        font-size: calc(16px + 2*(100vw - 420px) / 860);
+      }
+    }
+
+    .logo-bottom {
+      width: 25%;
     }
   }
 
-  .logo-bottom {
-    width: 25%;
+  .husband {
+    transform: rotate(-2deg);
+    box-shadow: -25px 25px 50px #a6bab8,
+      0 0 0 #ffffff;
+  }
+
+  .wife {
+    transform: rotate(2deg);
+    box-shadow: 25px 25px 50px #a6bab8,
+      0 0 0 #ffffff;
+  }
+
+  .welcom-container {
+    width: 60%;
+    margin-top: 10rem;
+
+    .welcom-text {
+      font-size: calc(16px + 2*(100vw - 420px) / 860);
+    }
   }
 }
 
-@keyframes beat {
-  0%, 50%, 100% { transform: scale(1.1, 1.1); }
-  30%, 80% { transform: scale(0.92, 0.95); }
+@media only screen and (min-width: 1440px) {
+
+  .couple-section .middle .matcher {
+    top: 72%;
+    width: 7.5rem;
+  }
+}
+
+@media only screen and (max-width: 1440px) {
+  .couple-section .middle .matcher {
+    top: 75%;
+    width: 6.5rem;
+  }
+}
+
+@media only screen and (max-width: 1280px) {
+}
+
+/* Tablette */
+@media only screen and (max-width: 1024px) {
+  .couple-section .middle .matcher {
+    top: 78%;
+    width: 5.5rem;
+  }
+}
+
+/* Phone */
+@media only screen and (max-width: 768px) {
+  .couple-section .middle .matcher {
+    top: 85%;
+    width: 4rem;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+
+}
+
+
+// TITLE
+
+.warp__placeholder{
+  position: absolute;
+  color: transparent;
+}
+
+span {
+  font-family: $heading-font;
+}
+
+.warp {
+  display: block;
+  position: relative;
+  width: 620px;
+  height: 250px;
+
+  color: $secondary-gold-color;
+  font-size: 100px;
+  margin-bottom: 40px;
+}
+
+[class*='warp__'] {
+  display: block;
+  position: absolute;
+}
+
+.warp__0 {
+  transform-origin: 50% 75px;
+  transform: translate(83.7303px,126.4485px) rotate(-0.853294rad);
+}
+
+.warp__1 {
+  transform-origin: 50% 75px;
+  transform: translate(97.5844px,103.9974px) rotate(-0.743744rad);
+}
+
+.warp__2 {
+  transform-origin: 50% 75px;
+  transform: translate(130.4418px,86.23249999999999px) rotate(-0.643516rad);
+}
+
+.warp__3 {
+  transform-origin: 50% 75px;
+  transform: translate(141.986px,69.52440000000001px) rotate(-0.532958rad);
+}
+
+.warp__4 {
+  transform-origin: 50% 75px;
+  transform: translate(181.3856px,49.9846px) rotate(-0.36863rad);
+}
+
+.warp__5 {
+  transform-origin: 50% 75px;
+  transform: translate(225.04px,36.7338px) rotate(-0.204263rad);
+}
+
+.warp__6 {
+  transform-origin: 50% 90px;
+  transform: translate(272.9394px,30.7359px) rotate(-0.055712rad);
+}
+
+.warp__7 {
+  transform-origin: 50% 90px;
+  transform: translate(320.0136px,33.122600000000006px) rotate(0.126482rad);
+}
+
+.warp__8 {
+  transform-origin: 50% 90px;
+  transform: translate(403.4px,48.45px) rotate(0.345555rad);
+}
+
+.warp__9 {
+  transform-origin: 50% 90px;
+  transform: translate(447.7283px,66.61170000000001px) rotate(0.512484rad);
+}
+
+.warp__10 {
+  transform-origin: 50% 90px;
+  transform: translate(479.4104px,91.7963px) rotate(0.691383rad);
+}
+
+.warp__11 {
+  transform-origin: 50% 90px;
+  transform: translate(513.0503px,128.5664px) rotate(0.894623rad);
 }
