--- a/angular-front/src/app/shared/maintenance/maintenance/maintenance.component.scss
+++ b/angular-front/src/app/shared/maintenance/maintenance/maintenance.component.scss
@@ -1,19 +1,17 @@
 @import "variables.scss";
+@import '~bootstrap/scss/bootstrap';
 
 .landscape {
-  border-top-right-radius:15px;
-  border-top-left-radius:15px;
-  box-shadow: 0px -5px 5px 0px #4cc4cf68;
-  margin-top: 50px;
+  margin-top: 1vw;
   width: 100%;
   height: auto;
 }
 
 .maintenance-title {
   color: $secondary-gold-color;
-  font-size: 5rem;
+  @include font-size(4.2vw);
 }
 
 .maintenance-text {
-  font-size: 2.5rem;
+  @include font-size(2.2vw);
 }
