--- a/angular-front/src/app/home/components/hero/hero.component.html
+++ b/angular-front/src/app/home/components/hero/hero.component.html
@@ -1,7 +1,7 @@
 <section class="couple-section">
   <div class="container-fluid">
     <div class="d-flex justify-content-center">
-      <div class="warp" aria-labelledby="warp-label">
+      <!-- <div class="warp" aria-labelledby="warp-label">
         <span id="warp-label" class="warp__placeholder">
           It's a match
         </span>
@@ -44,7 +44,7 @@
             h
           </span>
         </span>
-      </div>
+      </div> -->
     </div>
     <div class="container">
       <div class="row justify-content-center">
