--- a/angular-front/src/app/home/components/hero/hero.component.scss
+++ b/angular-front/src/app/home/components/hero/hero.component.scss
@@ -26,6 +26,7 @@
     background: rgb(47, 128, 237);
     background: linear-gradient(160deg, rgba(47, 128, 237, 1) 5%, rgba(141, 240, 229, 1) 85%);
     padding: 0 0 10px 0;
+    margin-top: 280px;
 
     img {
       width: 100%;
