--- a/angular-front/src/app/shared/maintenance/maintenance/maintenance.component.scss
+++ b/angular-front/src/app/shared/maintenance/maintenance/maintenance.component.scss
@@ -2,7 +2,6 @@
 @import '~bootstrap/scss/bootstrap';
 
 .landscape {
-  margin-top: 1vw;
   width: 100%;
   height: auto;
 }
@@ -14,4 +13,24 @@
 
 .maintenance-text {
   @include font-size(2.2vw);
+}
+
+@media only screen and (max-width: 768px) {
+  .maintenance-title {
+    font-size: 2rem;
+  }
+
+  .maintenance-text {
+    font-size: 1rem;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .maintenance-title {
+    font-size: 2rem;
+  }
+
+  .maintenance-text {
+    font-size: 1rem;
+  }
 }
