--- a/angular-front/src/styles/styles.scss
+++ b/angular-front/src/styles/styles.scss
@@ -24,31 +24,14 @@ h1, h2, h3, h4, h5, h6 {
   visibility: visible;
 }
 
-.heading-line {
+.section-heading {
   width: 100%;
+  @include font-size(7vw);
   color: $white-color;
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 0 !important;
-  padding: 1.5rem 3rem 2.5rem 3rem;
-  &:before, &:after{
-    content: "";
-    flex: 1 1;
-    border-bottom: $sizeBorder solid $white-color;
-    margin: auto;
-  }
-  &:before {
-    margin-right: 1.2rem;
-  }
-  &:after {
-    margin-left: 1.2rem;
-  }
+  padding: 1rem 0 1rem 0;
 
   &.gold {
     color: $secondary-gold-color;
-    &:before, &:after{
-      border-bottom: $sizeBorder solid $secondary-gold-color;
-    }
   }
 }
 
@@ -114,9 +97,6 @@ background: linear-gradient(0deg, rgba(67,206,162,1) 0%, rgba(87,215,180,1) 8%, 
   }
 
 @media only screen and (min-width: 768px) {
-  .heading-line {
-    @include font-size(2vw);
-  }
 
   .light-button {
     font-size: 1.5vw;
@@ -125,8 +105,8 @@ background: linear-gradient(0deg, rgba(67,206,162,1) 0%, rgba(87,215,180,1) 8%, 
 }
 
 @media only screen and (max-width: 768px) {
-  .heading-line {
-    @include font-size(2rem);
+  .section-heading {
+    @include font-size(8vw);
     &:before {
       margin-right: 1rem;
     }
@@ -142,7 +122,7 @@ background: linear-gradient(0deg, rgba(67,206,162,1) 0%, rgba(87,215,180,1) 8%, 
 }
 
 @media only screen and (max-width: 425px) {
-  .heading-line {
+  .section-heading {
     @include font-size(6vw);
     &:before {
       margin-right: 0.5rem;
