feature#12: First init form

--- a/angular-front/src/app/home/components/countdown-group/countdown-group.component.html
+++ b/angular-front/src/app/home/components/countdown-group/countdown-group.component.html
@@ -1,7 +1,7 @@
 <div class="countdown d-flex flex-column align-items-center">
   <div class="countdown-title d-flex flex-column align-items-center">
     <h1 class="section-heading gold text-center" i18n>Time remaining</h1>
-    <img class="us" src="/assets/images/us.png" alt="us" />
+    <img class="us" src="/assets/images/resized-couple.png" alt="us" />
   </div>
   <div class="unselectable-content d-flex justify-content-center align-items-center">
     <div class="d-flex flex-column align-items-center">
